add heartland single-use tokenization

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -20,6 +20,18 @@
         <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
       </ion-card-content>
     </ion-card>
+    <ion-card>
+      <ion-card-header>
+        <ion-card-subtitle>Checkout</ion-card-subtitle>
+        <ion-card-title>Enter Payment Information</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <div id="card-number"></div>
+        <div id="card-expiration"></div>
+        <div id="card-csc"></div>
+        <div id="submit"></div>
+      </ion-card-content>
+    </ion-card>
     <ion-list lines="none">
       <ion-list-header>
         <ion-label>Resources</ion-label>
